js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib2/l2a.0.kt
inline fun funA() = listOf(fun1()).joinToString()
inline fun funB() = listOf(fun2()).joinToString()
